2006-06-01  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-modules (pbuilder-options): silence ln -s for /etc/mtab

2006-05-31  Junichi Uekawa  <dancer@debian.org>

	* pbuilder: update address of GPL, and generally update copyright dates.

	* debian/copyright (Copyright): update copyright info.

2006-05-29  Matt Kraai  <kraai@debian.org>

	* pdebuild.1: Fix a misspelling of pdebuild.

2006-05-28  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-user-mode-linux.1: uppercase url->URL

	* pbuilder.8: ditto

	* pdebuild.1: From comment from Sesse, note that the
	default place build results are placed is
	/var/cache/pbuilder/result.

2006-05-27  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml: document cowdancer and pdebuild
	cowdancer option.

2006-05-24  Junichi Uekawa  <dancer@debian.org>

	* pbuilder-buildpackage-funcs: quiet down cowprotect, it's giving
	out useless output, like the following:

	Copying back the cached apt archive contents
	/var/cache/pbuilder/build/cow.12278/etc/passwd
	/var/cache/pbuilder/build/cow.12278/etc/group
	Copying source file

	
	* pbuilder.8: fix pbuilder execute command-line specification to
	reflect that script can receive command-line parameters.

	* pdebuild: add a in invocation to pbuilder execute "--", to avoid
	reorder in cowbuilder, and still work with pbuilder.

	* pdebuild.1: document --pbuilder option.

	* pbuilderrc.5: document the new option

	* pdebuild-checkparams: --pbuilder option. Use pbuilder as default.
	It is possible to use cowbuilder.

	* pbuilder: add --XXX options as compatibility options for cowbuilder.

	* pdebuild (ARCHITECTURE): use PDEBUILD_PBUILDER instead of calling pbuilder directly,
	and use cowdancer-compatible command-line options.

	* Documentation/pbuilder-doc.xml: generally spellcheck, and revise.

	* pdebuild.1: spellcheck

	* pdebuild-user-mode-linux.1: spellcheck

	* pbuilderrc.5: spellcheck

	* pbuilder-modules: remove mention of potato/woody, since they