@@ -4,7 +4,7 @@ TODO and possible bugs:
    - hooks should be supported (342613)
    - Use pbuilder cache in pdebuild-internal (235237)
 I think I just need to add hacks to copy stuff.
-   - testsuite for pdebuid-internal?
+   - testsuite for pdebuild-internal?
 
 * post-etch:
    - support --allow-unauthenticated and package signiatures; #317998
