@@ -236,7 +236,7 @@ For
 and
 .B login
 targets, 
-.B pbuider\-user\-mode\-linux
+.B pbuilder\-user\-mode\-linux
 will try to use COW devices.
 
 Inside user-mode-linux, pbuilder-user-mode-linux will mount 
