@@ -1,3 +1,10 @@
+2006-06-04  Junichi Uekawa  <dancer@debian.org>
+
+	* debian/TODO: spellfix
+	* pbuilder-user-mode-linux.1: spellfix
+
+	* Documentation/pbuilder-doc.xml: add note on tmpfs building.
+
 2006-06-01  Junichi Uekawa  <dancer@debian.org>
 
 	* pbuilder-modules (pbuilder-options): silence ln -s for /etc/mtab
@@ -2430,7 +2437,7 @@
 
 	* debian/rules (binary-arch): add manpage install
 
-	* pbuider-loadconfig: create from checkparams. a module to load config files only.
+	* pbuilder-loadconfig: create from checkparams. a module to load config files only.
 
 	* debuild-pbuilder: add debuild wrapper script.
 
